@@ -626,7 +626,6 @@ enum{
 	Qmemory,
 	Qmsec,
 	Qnull,
-	Qpin,
 	Qrandom,
 	Qnotquiterandom,
 	Qsysname,
@@ -650,7 +649,6 @@ static Dirtab consdir[]=
 	"memory",	{Qmemory},	0,		0444,
 	"msec",		{Qmsec},	NUMSIZE,	0444,
 	"null",		{Qnull},	0,		0666,
-	"pin",		{Qpin},		0,		0666,
 	"random",	{Qrandom},	0,		0444,
 	"notquiterandom", {Qnotquiterandom}, 0,	0444,
 	"sysname",	{Qsysname},	0,		0664,
@@ -956,12 +954,6 @@ consread(Chan *c, void *buf, long n, vlong offset)
 		else
 			return qread(kscanq, buf, n);
 
-	case Qpin:
-		p = "pin set";
-		if(up->env->pgrp->pin == Nopin)
-			p = "no pin";
-		return readstr(offset, buf, n, p);
-
 	case Qtime:
 		snprint(tmp, sizeof(tmp), "%.lld", (vlong)mseconds()*1000);
 		return readstr(offset, buf, n, tmp);
@@ -1145,16 +1137,6 @@ conswrite(Chan *c, void *va, long n, vlong offset)
 
 	case Qnull:
 		break;
-
-	case Qpin:
-		if(up->env->pgrp->pin != Nopin)
-			error("pin already set");
-		if(n >= sizeof(buf))
-			n = sizeof(buf)-1;
-		strncpy(buf, va, n);
-		buf[n] = '\0';
-		up->env->pgrp->pin = atoi(buf);
-		return n;
 
 	case Qsysname:
 		if(offset != 0)
